# ChangeLog for dev-lang/julia
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/julia/ChangeLog,v 1.3 2014/02/25 23:17:50 calchan Exp $

  25 Feb 2014; Denis Dupeyron <calchan@gentoo.org> julia-0.2.0.ebuild:
  Fixed bug #501868 as well as general brokenness.

  09 Jan 2014; Patrick Lauer <patrick@gentoo.org> julia-0.2.0.ebuild:
  Fix homepage

*julia-0.2.0 (25 Nov 2013)

  25 Nov 2013; Patrick Lauer <patrick@gentoo.org> +julia-0.2.0.ebuild,
  +metadata.xml:
  Initial import, ebuild by me. Needs some more cleanups, but is kinda mostly
  working