@@ -1,6 +1,6 @@
 DIST double-conversion-1.1.1.tar.gz 7012946 SHA256 e1cabb73fd69e74f145aea91100cde483aef8b79dc730fcda0a34466730d4d1d SHA512 e116196eb60077565050995b060049747a3c72e743eea21c6c9fb68414adc533d456d19e1ca241f08895cca97a38511477bdc7d2e0cae38d149c83cb9d6896ad WHIRLPOOL d69604fbb6e1b5cac8d4dd0f8cf0af4621e32548e9e5061dcb843067a3f821c6f52e918e3e367988076b9ccf0be0ab68107cc6a21b02f4de424a1d98b399fc33
 DIST dsfmt-2.2.tar.gz 291253 SHA256 bc3947a9b2253a869fcbab8ff395416cb12958be9dba10793db2cd7e37b26899 SHA512 e59d54166dc2df9f6e6abd68658c3624082feabe445215256fead47a8944c41578d11c2b4ba57eac174587a45e445b2aabd867db24fd9e951842513cf914f60b WHIRLPOOL 986b24d8c302f21e305a6bbc6b33e42678c27018c71c566d3f052ce7600fd06c81d77375d08b2b40c0c4aa93ca74cad819a34d0350e33a61f5837f27de7cf193
 DIST julia-0.2.0.tar.bz2 4393404 SHA256 fecde7b4fbd26093dedd04564ce12b47a232525bf036c7b5f392f369ddc9a514 SHA512 3e0718c69936959dc717cf511f8fd7086eedb2fd4996519fcdb54a0b0c38d09b5b1c7d239e9e42234aab869446feec88bfd40b5419ae74c9f15bf523a757e898 WHIRLPOOL 265650e99028260d1dfe76c504468eca23bad0881790893d8b4b6cd98b0b5a936dc064ee1b661a04c762e2d78d4d23243158f594afef27001c8b4a0de259afff
-EBUILD julia-0.2.0.ebuild 3163 SHA256 5b4badf8d8cdedf3f90a92d69ee18be856b21440923c0ab43a22c02bad7fb978 SHA512 43119b0dba8197033748ea38c10c70e7894ca588fd6f633f17b35d38ab3b53c81a4c0ce7de26e010bd785ee373e922427098aae1c48491a4bed894fcd78b9bb5 WHIRLPOOL 67d2eef04eee42d3207156d2fccf11d7625d7416387be4934d65e7445c8d55e2abd3a567a359c350120f0d32fc32408a31d15c200017f1ef9e38d92c05cccc60
-MISC ChangeLog 615 SHA256 1a3698a753663f6bfc238cf1922a9dcb70bb36ec3c5e557a81104cf3cae09e4b SHA512 e335d698283b778c15e20d13f84265ece89b60b2eec092888983d605566cee93f192884bff2fc560fcdef40028cc1347a58e94c84090b2dc55db5ec7000b7120 WHIRLPOOL e943731851a4ae8cd40c54112c49da6af02faeddbed98e511dcc2bd398be2a4f4f486957e914bdb770d9d7eac3c6cb2c6203efe8e6cdbeac95e26a7dd252cff4
+EBUILD julia-0.2.0.ebuild 2619 SHA256 ae2c1cb1a8709cea9dfbc6ae68efde94d7ff481d15429339e59156759e2a7268 SHA512 045b4adfaf28d41b25c721c25150355cf9a99603c747e2cfc3534f4407b6ffca7bb31f368a1c6a96ead55b262471bdba443b4d546e50eda81ef5ba5db9ed7f9a WHIRLPOOL 27e21e72c22c1dc8022f62b6f5a7209e949e6daf090cef02db55cf3bb2720170be40fe5b1adfb8d8c33e89fea5db808cb7793c3c8257b5a6cb1426b2c92bca01
+MISC ChangeLog 728 SHA256 81ba98d908cbc69bda9c7f6a1f1ef2f8d6afc506775ef7f9d9258a63809dec0f SHA512 9cc8be1931abc97fb037e6cdb73b0db5ae47f4979c6ea233ae0536418ac3b23cf78d67a060a1049d81056c430e1eae8855c2a01da5063d5e17fbe6d07d886cf5 WHIRLPOOL 12d4782d1eb90d27c9aa04aac8f05110437af8dd4b358048aa9db03a5073828637471faacb5f3a9364ac6219411bc1edd6765013cd79afe0c39536eeb179295c
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
